feat: implement GUEST_MODE and demo data in dashboard, refactor CodeFlow backend architecture, and stabilize cloud deployment
Summary of changes:
1. Backend: Migrated CodeFlowController and services to constructor-based dependency injection for better thread-safety.
2. Dashboard: Added GUEST_MODE support in authUtils.ts with comprehensive DEMO_MOCK_DATA. Added AdminAccessGate component.
3. Stability: Fixed Firestore mapping in User model and optimized Cloud Run deployment settings.
4. Infrastructure: Integrated Firebase Data Connect and included generated SDKs for cross-component compatibility.
5. Configuration: Updated build.gradle.kts and application-cloud.properties for environment consistency.